[gd_scene load_steps=2 format=3 uid="uid://dqdttcqq4pny6"]

[ext_resource type="Script" uid="uid://b88evch2qk0j0" path="res://steam_curator_tycoon/bot/bot_node.gd" id="1_ae7oo"]

[node name="BotNode" type="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
offset_right = 190.0
offset_bottom = 31.0
mouse_filter = 2
script = ExtResource("1_ae7oo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="IdLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "Bot 3"
fit_content = true
autowrap_mode = 0

[node name="StatusLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
bbcode_enabled = true
text = "Not Deployed"
fit_content = true
autowrap_mode = 0

[node name="DurationLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "2.54s"
fit_content = true
autowrap_mode = 0
